--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "awfis-foods",
+  "name": "food-cart",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://webber2408.github.io/Food-React/",
   "dependencies": {
     "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
@@ -15,6 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
